Now gradient accumulation, clicks like in competition, no augmentation at all

--- a/scripts/training/ExpSimpleCopy.ipynb
+++ b/scripts/training/ExpSimpleCopy.ipynb
@@ -32,26 +32,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from scipy import integrate\n",
-    "from src.eval_metrics import (  # TODO : Use the competition repo as source instead\n",
-    "    compute_edt,\n",
-    "    compute_multi_class_dsc,\n",
-    "    compute_multi_class_nsd,\n",
-    "    sample_coord,\n",
-    ")\n",
-    "import cc3d"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {
     "vscode": {
@@ -95,12 +75,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import time\n",
-    "import sys\n",
-    "import numpy as np\n",
     "import torch\n",
-    "import contextlib\n",
-    "import gc\n",
     "from nnInteractive.inference.inference_session import nnInteractiveInferenceSession\n",
     "import os.path\n"
    ]
@@ -193,45 +168,15 @@
    },
    "outputs": [],
    "source": [
-    "from batchgeneratorsv2.transforms.base.basic_transform import BasicTransform\n",
-    "from batchgeneratorsv2.transforms.intensity.brightness import (\n",
-    "    MultiplicativeBrightnessTransform,\n",
-    ")\n",
-    "from batchgeneratorsv2.transforms.intensity.contrast import (\n",
-    "    ContrastTransform,\n",
-    "    BGContrast,\n",
-    ")\n",
-    "from batchgeneratorsv2.transforms.intensity.gamma import GammaTransform\n",
-    "from batchgeneratorsv2.transforms.intensity.gaussian_noise import GaussianNoiseTransform\n",
-    "from batchgeneratorsv2.transforms.nnunet.random_binary_operator import (\n",
-    "    ApplyRandomBinaryOperatorTransform,\n",
-    ")\n",
-    "from batchgeneratorsv2.transforms.nnunet.remove_connected_components import (\n",
-    "    RemoveRandomConnectedComponentFromOneHotEncodingTransform,\n",
-    ")\n",
-    "from batchgeneratorsv2.transforms.nnunet.seg_to_onehot import (\n",
-    "    MoveSegAsOneHotToDataTransform,\n",
-    ")\n",
-    "from batchgeneratorsv2.transforms.noise.gaussian_blur import GaussianBlurTransform\n",
-    "from batchgeneratorsv2.transforms.spatial.low_resolution import (\n",
-    "    SimulateLowResolutionTransform,\n",
-    ")\n",
     "from batchgeneratorsv2.transforms.spatial.mirroring import MirrorTransform\n",
     "from batchgeneratorsv2.transforms.spatial.spatial import SpatialTransform\n",
     "from batchgeneratorsv2.transforms.utils.compose import ComposeTransforms\n",
     "from batchgeneratorsv2.transforms.utils.deep_supervision_downsampling import (\n",
     "    DownsampleSegForDSTransform,\n",
     ")\n",
-    "from batchgeneratorsv2.transforms.utils.nnunet_masking import MaskImageTransform\n",
-    "from batchgeneratorsv2.transforms.utils.pseudo2d import (\n",
-    "    Convert3DTo2DTransform,\n",
-    "    Convert2DTo3DTransform,\n",
-    ")\n",
     "from batchgeneratorsv2.transforms.utils.random import RandomTransform\n",
     "from batchgeneratorsv2.transforms.utils.remove_label import RemoveLabelTansform\n",
-    "from batchgeneratorsv2.transforms.utils.seg_to_regions import (\n",
-    "    ConvertSegmentationToRegionsTransform,\n",
-    ")\n",
+    "\n",
     "from src.training.transforms import AddSegToImageTransform\n",
     "from src.training.transforms import NormalizeSingleImageTransform\n",
     "from src.training.transforms import AddBBoxAndEmptyChannelsSingleClassTransform\n",
@@ -255,11 +200,12 @@
     "train_transform = ComposeTransforms(\n",
     "    [\n",
     "        NormalizeSingleImageTransform(),\n",
-    "        MONAIRandSpatialTransform(\n",
-    "            rotate_range=(0.025 * np.pi * 2, 0.025 * np.pi * 2, 0.025 * np.pi * 2),\n",
-    "            scale_range=(0.2, 0.2, 0.2),\n",
-    "            prob_affine=0.5,\n",
-    "        ),\n",
+    "        # MONAIRandSpatialTransform(\n",
+    "        #     rotate_range=(0.025 * np.pi * 2, 0.025 * np.pi * 2, 0.025 * np.pi * 2),\n",
+    "        #     scale_range=(0.2, 0.2, 0.2),\n",
+    "        #     prob_affine=0.5,\n",
+    "        # ),\n",
+    "        MONAIFixedSpatialTransform(),\n",
     "        # RandomTransform(\n",
     "        #     apply_probability=0.1,\n",
     "        #     transform=GaussianNoiseTransform(\n",
@@ -424,7 +370,7 @@
    "source": [
     "from copy import deepcopy\n",
     "import shutil\n",
-    "out_dir = newer_checkpoint_dir#'/nfs/data/nii/data1/Analysis/GPUnet/ANALYSIS_segfm-robin/data/model-checkpoints/try_from_nb_all_data_competition_bbox/'\n",
+    "out_dir = '/nfs/data/nii/data1/Analysis/GPUnet/ANALYSIS_segfm-robin/data/model-checkpoints/try_from_nb_no_augment/'#'/nfs/data/nii/data1/Analysis/GPUnet/ANALYSIS_segfm-robin/data/model-checkpoints/try_from_nb_all_data_competition_bbox/'\n",
     "try:\n",
     "    shutil.copytree(orig_checkpoint_dir, out_dir)\n",
     "except FileExistsError:\n",
@@ -434,6 +380,20 @@
     "\n",
     "\n",
     "trained_chkpt = deepcopy(chkpt_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "accumulate_batch_size = 8\n",
+    "n_batches_accumulate = accumulate_batch_size // 2"
    ]
   },
   {
@@ -452,6 +412,8 @@
     "n_epochs = 25\n",
     "moving_dsc = None\n",
     "all_mean_dscs = []\n",
+    "i_batch = 0\n",
+    "optim_network.zero_grad()\n",
     "for i_epoch in trange(n_epochs):\n",
     "    epoch_mean_dscs = []\n",
     "    for batch in (pbar := tqdm(train_loader)):\n",
@@ -470,13 +432,16 @@
     "            sum_targets = torch.sum(targets, dim=(1,2,3))\n",
     "            mean_dsc = torch.mean((2 * intersect + eps) / (sum_pred + sum_targets + eps))\n",
     "            loss = cent + 10 * (1 - mean_dsc)\n",
-    "            optim_network.zero_grad()\n",
     "            loss.backward()\n",
-    "            if torch.isfinite(loss).item():\n",
+    "            i_batch += 1\n",
+    "            if torch.isfinite(loss).item() and ((i_batch % n_batches_accumulate) == 0):\n",
     "                optim_network.step()\n",
-    "            else:\n",
+    "                optim_network.zero_grad()\n",
+    "            elif not torch.isfinite(loss).item():\n",
     "                print(\"loss not finite, not updating!\")\n",
-    "            optim_network.zero_grad()\n",
+    "                optim_network.zero_grad()\n",
+    "            else:\n",
+    "                pass\n",
     "        epoch_mean_dscs.append(mean_dsc.item())\n",
     "        if torch.isfinite(loss).item():\n",
     "            moving_dsc = mean_dsc if moving_dsc is None else (moving_dsc * 0.98 + mean_dsc * 0.02)\n",
@@ -528,8 +493,15 @@
    },
    "outputs": [],
    "source": [
-    "# now try click changes, better sampling, gradient accum?\n",
-    "# different sampling?"
+    "# look at examples etc.\n",
+    "# now try click changes, grad clip? gradient accum?\n",
+    "# different sampling?\n",
+    "# old loki\n",
+    "# http://10.217.3.189:8888/lab?token=7fe7920caa53ef1ca025abdc8c4fdaedc532ecf340635f2f\n",
+    "\n",
+    "\n",
+    "# nero\n",
+    "# http://10.231.0.162:8888/lab?token=1e5d7331c18592a8cb58ced34b88232869e16ea21a98b4c9"
    ]
   },
   {
@@ -564,6 +536,82 @@
     "            cent=cent.item()\n",
     "        )\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "finite_dscs = np.array(all_mean_dscs)[np.isfinite(np.array(all_mean_dscs))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "plt.plot(np.correlate(finite_dscs, np.ones(100)/100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "display(pd.DataFrame(test_results).mean())"
    ]
   },
   {
