add options to only add previous click (but always add bbox), final docker context

--- a/scripts/nnUnet_training_guide.ipynb
+++ b/scripts/nnUnet_training_guide.ipynb
@@ -453,7 +453,7 @@
     "python scripts/eval.py -ca 0 -m nnint_custom --checkpoint_path /nfs/data/nii/data1/Analysis/GPUnet/ANALYSIS_incontext/SegFM3D/data/nnUNet_results/Dataset006_AMOS/CustomTrainer__nnUNetResEncUNetLPlans_noResampling__3d_fullres_ps192\n",
     "python scripts/eval.py -ca 0 -m nnint_custom --checkpoint_path $NNINT_CKPT_DIR/nnInteractive_ours\n",
     "\n",
-    "python scripts/eval.py -ca 0 -m nnint_custom --checkpoint_path $nnUNet_results/Dataset006_AMOS/CustomTrainer__nnUNetResEncUNetLPlans_noResampling__3d_fullres_ps192"
+    "python scripts/eval.py -ca 0 -m nnint_custom --checkpoint_path $nnUNet_results/Dataset006_AMOS/CustomTrainer__nnUNetResEncUNetLPlans_noResampling__3d_fullres_ps192\n"
    ]
   },
   {
