--- a/experiments/results_analysis.ipynb
+++ b/experiments/results_analysis.ipynb
@@ -24,11 +24,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "dc453d8c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DSC Statistics for each file:\n",
+      "--------------------------------------------------\n",
+      "test_results_6_2025-05-30_08-30-43-999.csv:\n",
+      "  Mean: 0.792588\n",
+      "  Std:  0.153001\n",
+      "\n",
+      "test_results_1_2025-05-30_10-08-10-999.csv:\n",
+      "  Mean: 0.800270\n",
+      "  Std:  0.136387\n",
+      "\n",
+      "test_results_2_2025-05-30_05-25-01-016.csv:\n",
+      "  Mean: 0.785795\n",
+      "  Std:  0.146185\n",
+      "\n",
+      "test_results_1_2025-05-30_04-38-36-364.csv:\n",
+      "  Mean: 0.800122\n",
+      "  Std:  0.124131\n",
+      "\n",
+      "test_results_0_2025-05-30_03-52-18-351.csv:\n",
+      "  Mean: 0.776089\n",
+      "  Std:  0.147205\n",
+      "\n",
+      "test_results_3_2025-05-30_06-11-17-965.csv:\n",
+      "  Mean: 0.790332\n",
+      "  Std:  0.148698\n",
+      "\n",
+      "test_results_4_2025-05-30_06-57-57-657.csv:\n",
+      "  Mean: 0.788713\n",
+      "  Std:  0.134043\n",
+      "\n",
+      "test_results_0_2025-05-30_09-21-19-609.csv:\n",
+      "  Mean: 0.795171\n",
+      "  Std:  0.140324\n",
+      "\n",
+      "test_results_5_2025-05-30_07-44-18-169.csv:\n",
+      "  Mean: 0.796395\n",
+      "  Std:  0.148492\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import os\n",
+    "import glob\n",
+    "\n",
+    "# Path to your folder containing CSV files\n",
+    "folder_path = \"/nfs/data/nii/data1/Analysis/GPUnet/ANALYSIS_segfm-robin/data/model-checkpoints/new-dataset/fold_0\"  # Replace with your actual folder path\n",
+    "\n",
+    "# Get all CSV files in the folder\n",
+    "csv_files = glob.glob(os.path.join(folder_path, \"*.csv\"))\n",
+    "\n",
+    "print(\"DSC Statistics for each file:\")\n",
+    "print(\"-\" * 50)\n",
+    "\n",
+    "for file_path in csv_files:\n",
+    "    # Get just the filename for display\n",
+    "    filename = os.path.basename(file_path)\n",
+    "    \n",
+    "    # Read the CSV file\n",
+    "    df = pd.read_csv(file_path)\n",
+    "    \n",
+    "    # Calculate mean and std for hard_dsc column\n",
+    "    mean_dsc = df['hard_dsc'].mean()\n",
+    "    std_dsc = df['hard_dsc'].std()\n",
+    "    \n",
+    "    print(f\"{filename}:\")\n",
+    "    print(f\"  Mean: {mean_dsc:.6f}\")\n",
+    "    print(f\"  Std:  {std_dsc:.6f}\")\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "code",
@@ -2600,6 +2674,18 @@
    "display_name": "segfm3d_2",
    "language": "python",
    "name": "segfm3d_2"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
