--- a/scripts/training/ExpSimpleNewDataset.ipynb
+++ b/scripts/training/ExpSimpleNewDataset.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch.autograd.grad_mode.set_grad_enabled at 0x7feda241ef00>"
+       "<torch.autograd.grad_mode.set_grad_enabled at 0x7ff879d13b90>"
       ]
      },
      "execution_count": 1,
@@ -781,18 +781,6 @@
    "display_name": "segfm3d_2",
    "language": "python",
    "name": "segfm3d_2"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.10"
   }
  },
  "nbformat": 4,
