add a training script

--- a/scripts/training/ExpSimpleNewDataset.ipynb
+++ b/scripts/training/ExpSimpleNewDataset.ipynb
@@ -2,28 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<torch.autograd.grad_mode.set_grad_enabled at 0x7ff879d13b90>"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
-    "torch.set_grad_enabled(False)  # Disable gradient calculation for inference"
+    "#torch.set_grad_enabled(False)  # Disable gradient calculation for inference"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,29 +50,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "nnUNet_raw is not defined and nnU-Net can only be used on data for which preprocessed files are already present on your system. nnU-Net cannot be used for experiment planning and preprocessing like this. If this is not intended, please read documentation/setting_up_paths.md for information on how to set this up properly.\n",
-      "nnUNet_preprocessed is not defined and nnU-Net can not be used for preprocessing or training. If this is not intended, please read documentation/setting_up_paths.md for information on how to set this up.\n",
-      "nnUNet_results is not defined and nnU-Net cannot be used for training or inference. If this is not intended behavior, please read documentation/setting_up_paths.md for information on how to set this up.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import torch\n",
-    "from nnInteractive.inference.inference_session import nnInteractiveInferenceSession\n",
     "import os.path\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,35 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from nnunetv2.utilities.get_network_from_plans import get_network_from_plans\n",
-    "network = get_network_from_plans(**args_for_network)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total parameters: 102,355,818\n"
-     ]
-    }
-   ],
-   "source": [
-    "total_params = sum(p.numel() for p in network.parameters())\n",
-    "print(f\"Total parameters: {total_params:,}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +109,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,59 +321,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Unsupported operator aten::alias encountered 312 time(s)\n",
-      "Unsupported operator aten::leaky_relu_ encountered 116 time(s)\n",
-      "Unsupported operator aten::add_ encountered 52 time(s)\n",
-      "Unsupported operator aten::avg_pool3d encountered 10 time(s)\n",
-      "Unsupported operator aten::diff encountered 1 time(s)\n",
-      "Unsupported operator aten::ne encountered 1 time(s)\n",
-      "Unsupported operator aten::meshgrid encountered 1 time(s)\n",
-      "Unsupported operator aten::sub encountered 1 time(s)\n",
-      "Unsupported operator aten::sum encountered 2 time(s)\n",
-      "Unsupported operator aten::pow encountered 1 time(s)\n",
-      "Unsupported operator aten::sqrt encountered 1 time(s)\n",
-      "Unsupported operator aten::lt encountered 1 time(s)\n",
-      "Unsupported operator aten::mul encountered 1 time(s)\n",
-      "Unsupported operator aten::__or__ encountered 2 time(s)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "FLOPs: 9887643426816\n"
-     ]
-    }
-   ],
-   "source": [
-    "from fvcore.nn import FlopCountAnalysis\n",
-    "\n",
-    "# Get a batch from the dataloader iterator\n",
-    "train_loader_iter = iter(train_loader)\n",
-    "batch = next(train_loader_iter)\n",
-    "input_tensor = batch[\"image\"].cuda()\n",
-    "\n",
-    "flops = FlopCountAnalysis(wrapped_network, input_tensor)\n",
-    "\n",
-    "print(f\"FLOPs: {flops.total()}\")  # In raw FLOPs (can divide by 1e9 for GFLOPs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4e1634ee8d69455ab63b9b438c5250ce",
+       "model_id": "a92f3f6cc83b484283373a33b7af9ff0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -437,7 +341,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3da43383089c4bdeaaf0e25069129d14",
+       "model_id": "6e951a6846fa4de7b1fb8dc8c5af6f75",
        "version_major": 2,
        "version_minor": 0
       },
@@ -452,33 +356,59 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8594262003898621\n",
-      "0.0002466946607455611\n",
+      "0.7810477018356323\n",
+      "0.01639322191476822\n",
       "\n",
-      "0.8792238235473633\n",
-      "0.009743480943143368\n",
+      "0.8391860723495483\n",
+      "0.05629042163491249\n",
       "\n",
-      "0.7520604133605957\n",
-      "0.010547947138547897\n",
+      "0.6755315661430359\n",
+      "0.0011192477541044354\n",
       "\n",
-      "0.9208256006240845\n",
-      "0.005537268240004778\n",
+      "0.9420574307441711\n",
+      "0.0019140371587127447\n",
+      "\n",
+      "0.7766499519348145\n",
+      "0.000999592011794448\n",
+      "\n",
+      "0.7223162651062012\n",
+      "0.0029333920683711767\n",
       "\n"
      ]
     },
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[20]\u001b[39m\u001b[32m, line 14\u001b[39m\n\u001b[32m     12\u001b[39m epoch_mean_dscs = []\n\u001b[32m     13\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m batch \u001b[38;5;129;01min\u001b[39;00m (pbar := tqdm(train_loader)):\n\u001b[32m---> \u001b[39m\u001b[32m14\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43;01mwith\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mdefer_keysignal_with_grad\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m:\u001b[49m\n\u001b[32m     15\u001b[39m \u001b[43m        \u001b[49m\u001b[43mtargets\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mbatch\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43msegmentation\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m.\u001b[49m\u001b[43mlong\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcuda\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     16\u001b[39m \u001b[43m        \u001b[49m\u001b[43mout\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mwrapped_network\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbatch\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mimage\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcuda\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/software/anaconda3/envs/segfm3d_2/lib/python3.12/contextlib.py:144\u001b[39m, in \u001b[36m_GeneratorContextManager.__exit__\u001b[39m\u001b[34m(self, typ, value, traceback)\u001b[39m\n\u001b[32m    142\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m typ \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m    143\u001b[39m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m144\u001b[39m         \u001b[38;5;28;43mnext\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mgen\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    145\u001b[39m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mStopIteration\u001b[39;00m:\n\u001b[32m    146\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mFalse\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/nfs/data/nii/data1/Analysis/GPUnet/ANALYSIS_segfm-robin/repos/segfm3d-nora/src/training/utils.py:50\u001b[39m, in \u001b[36mdefer_keysignal_with_grad\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m     47\u001b[39m \u001b[38;5;129m@contextmanager\u001b[39m\n\u001b[32m     48\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mdefer_keysignal_with_grad\u001b[39m():\n\u001b[32m     49\u001b[39m     \u001b[38;5;66;03m# Wrap the existing defer_keysignal context manager\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m50\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43;01mwith\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mdefer_keysignal\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m:\u001b[49m\n\u001b[32m     51\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;66;43;03m# Turn on PyTorch gradient mode\u001b[39;49;00m\n\u001b[32m     52\u001b[39m \u001b[43m        \u001b[49m\u001b[43mtorch\u001b[49m\u001b[43m.\u001b[49m\u001b[43mset_grad_enabled\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[32m     53\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;28;43;01mtry\u001b[39;49;00m\u001b[43m:\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/software/anaconda3/envs/segfm3d_2/lib/python3.12/contextlib.py:144\u001b[39m, in \u001b[36m_GeneratorContextManager.__exit__\u001b[39m\u001b[34m(self, typ, value, traceback)\u001b[39m\n\u001b[32m    142\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m typ \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m    143\u001b[39m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m144\u001b[39m         \u001b[38;5;28;43mnext\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mgen\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    145\u001b[39m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mStopIteration\u001b[39;00m:\n\u001b[32m    146\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mFalse\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/nfs/data/nii/data1/Analysis/GPUnet/ANALYSIS_segfm-robin/repos/segfm3d-nora/src/training/utils.py:44\u001b[39m, in \u001b[36mdefer_keysignal\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m     42\u001b[39m signal.signal(signum, original_handler)\n\u001b[32m     43\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m defer_handle_args \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m---> \u001b[39m\u001b[32m44\u001b[39m     \u001b[43moriginal_handler\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43mdefer_handle_args\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[31mKeyboardInterrupt\u001b[39m: "
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception ignored in: <function _MultiProcessingDataLoaderIter.__del__ at 0x7ff87b066f20>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/software/anaconda3/envs/segfm3d_2/lib/python3.12/site-packages/torch/utils/data/dataloader.py\", line 1618, in __del__\n",
+      "    self._shutdown_workers()\n",
+      "  File \"/software/anaconda3/envs/segfm3d_2/lib/python3.12/site-packages/torch/utils/data/dataloader.py\", line 1582, in _shutdown_workers\n",
+      "    w.join(timeout=_utils.MP_STATUS_CHECK_INTERVAL)\n",
+      "  File \"/software/anaconda3/envs/segfm3d_2/lib/python3.12/multiprocessing/process.py\", line 149, in join\n",
+      "    res = self._popen.wait(timeout)\n",
+      "          ^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/software/anaconda3/envs/segfm3d_2/lib/python3.12/multiprocessing/popen_fork.py\", line 40, in wait\n",
+      "    if not wait([self.sentinel], timeout):\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/software/anaconda3/envs/segfm3d_2/lib/python3.12/multiprocessing/connection.py\", line 1136, in wait\n",
+      "    ready = selector.select(timeout)\n",
+      "            ^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/software/anaconda3/envs/segfm3d_2/lib/python3.12/selectors.py\", line 415, in select\n",
+      "    fd_event_list = self._selector.poll(timeout)\n",
+      "                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "KeyboardInterrupt: \n",
+      "Exception ignored in: <generator object tqdm.__iter__ at 0x7ff98d043400>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/software/anaconda3/envs/segfm3d_2/lib/python3.12/site-packages/tqdm/std.py\", line 1196, in __iter__\n",
+      "    self.close()\n",
+      "  File \"/software/anaconda3/envs/segfm3d_2/lib/python3.12/site-packages/tqdm/notebook.py\", line 272, in close\n",
+      "    def close(self):\n",
+      "\n",
+      "  File \"/software/anaconda3/envs/segfm3d_2/lib/python3.12/site-packages/torch/utils/data/_utils/signal_handling.py\", line 73, in handler\n",
+      "    _error_if_any_worker_fails()\n",
+      "RuntimeError: DataLoader worker (pid 2833) exited unexpectedly with exit code 1. Details are lost due to multiprocessing. Rerunning with num_workers=0 may give better error trace.\n"
      ]
     }
    ],
@@ -745,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -781,6 +711,18 @@
    "display_name": "segfm3d_2",
    "language": "python",
    "name": "segfm3d_2"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
